<resources>
    <string name="app_name">CalenderView</string>
    <string name="current_date">current date</string>
    <string name="sun">SUN</string>
    <string name="mon">MON</string>
    <string name="tue">TUE</string>
    <string name="wed">WED</string>
    <string name="thu">THU</string>
    <string name="fri">FRI</string>
    <string name="sat">SAT</string>
    <string name="_00">00</string>
    <string name="end">End</string>
    <string name="start">Start</string>
</resources>
