<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:background="@android:color/white"
              android:orientation="vertical">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="16dp">


        <android.support.v7.widget.AppCompatImageView
                android:id="@+id/cal_prev_button"
                android:layout_width="30dp"
                android:layout_height="30dp"
                app:srcCompat="@drawable/ic_left_arrow"
                tools:ignore="VectorDrawableCompat"/>


        <android.support.v7.widget.AppCompatTextView
                android:id="@+id/cal_current_mnth"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/current_date"
                android:textAppearance="@android:style/TextAppearance.Medium"
                android:textColor="@color/colorBlack"/>


        <android.support.v7.widget.AppCompatImageView
                android:id="@+id/cal_next_button"
                android:layout_width="30dp"
                android:layout_height="30dp"
                app:srcCompat="@drawable/ic_right_arrow"
                tools:ignore="VectorDrawableCompat"/>
    </LinearLayout>


    <LinearLayout
            android:id="@+id/cal_header_view"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

        <android.support.v7.widget.AppCompatTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:text="@string/sun"
                android:textColor="@color/colorBlack"/>

        <android.support.v7.widget.AppCompatTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:text="@string/mon"
                android:textColor="@color/colorBlack"/>

        <android.support.v7.widget.AppCompatTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:text="@string/tue"
                android:textColor="@color/colorBlack"/>

        <android.support.v7.widget.AppCompatTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:text="@string/wed"
                android:textColor="@color/colorBlack"/>

        <android.support.v7.widget.AppCompatTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:text="@string/thu"
                android:textColor="@color/colorBlack"/>

        <android.support.v7.widget.AppCompatTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:text="@string/fri"
                android:textColor="@color/colorBlack"/>

        <android.support.v7.widget.AppCompatTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:text="@string/sat"
                android:textColor="@color/colorBlack"/>


    </LinearLayout>

    <!-- days view -->
    <android.support.v7.widget.RecyclerView
            android:id="@+id/cal_grid_day"
            android:layout_width="match_parent"
            android:layout_height="340dp"/>
</LinearLayout>